--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue-loader": "^15.9.1",
     "vue-router": "^3.1.6",
     "vue-template-compiler": "^2.6.11",
-    "vue2-persian-datepicker": "^2.1.1"
+    "vue2-persian-datepicker": "^2.1.1",
+    "vuex": "^3.3.0"
   },
   "version": "0.1.0",
   "devDependencies": {
