--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "i": "^0.3.6",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.1",
+    "vue-persian-datetime-picker": "^2.1.5",
     "vue-router": "^3.1.6",
     "vue-template-compiler": "^2.6.11",
     "vue2-persian-datepicker": "^2.1.1",
